[package]
name = "pp"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
pingora = { version = "0.6.0", features = ["cache", "lb", "proxy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }